# FfmpegTest-master1

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wangxi/ffmpegtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: myffmpeg.cpp
app/src/main/cpp/include/: com_example_wangxi_ffmpegtest_VideoUtils.h  log_utils.h
app/src/main/java/com/example/wangxi/ffmpegtest/: BaseApplication.java  Constant.java  FileConstantPath.java  MainActivity.java  MenuAdapter.java  MenuViewHolder.java  VideoUtils.java
app/src/main/res/layout/: activity_main.xml  item_menu_layout.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/wangxi/ffmpegtest/: ExampleUnitTest.java
